updated todo and added register route

--- a/Web App/ToDo.txt
+++ b/Web App/ToDo.txt
@@ -1,4 +1,5 @@
 -> Implement Sessions: https://stackoverflow.com/questions/37183766/how-to-get-the-session-value-in-ejs
+-> Make DB for users
 -> Make actions menu
 -> Implement database for alarms
 -> Implement database for widgets
